fix: more spacing in edit preferences form

--- a/scss/_off.scss
+++ b/scss/_off.scss
@@ -636,6 +636,10 @@ html[dir="rtl"] {
   }
 }
 
+.edit_close_button {
+  margin-bottom: 1rem;
+}
+
 .match_icons {
   height: 48px;
   margin-right: 4px;
